--- a/App_Back/src/shared/mails/templates/PrintRecipeBody.html
+++ b/App_Back/src/shared/mails/templates/PrintRecipeBody.html
@@ -1,2 +1,8 @@
 Merluza en salsa verde
-Huevo  cantidad: 3 
+rodajas de merluza  cantidad: 8 
+cebolla grande  cantidad: 1 
+dientes de ajos  cantidad: 2 
+puñado de perejil  cantidad: 1 
+caldo de pescado  cantidad: 1 
+vino blanco  cantidad: 3 
+cucharada postre de harina de trigo o maicena  cantidad: 4 
